# pixels

./: .travis.yml  Cargo.toml  LICENSE  MSRV.md  README.md  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/conway/: Cargo.toml  README.md  main.rs
examples/conway/src/: main.rs
examples/custom-shader/: Cargo.toml  README.md
examples/custom-shader/shaders/: frag.spv  noise.wgsl  shader.frag  vert.spv
examples/custom-shader/src/: main.rs  renderers.rs
examples/egui-winit/: Cargo.toml  README.md
examples/egui-winit/src/: gui.rs  main.rs
examples/fill-window/: Cargo.toml  README.md
examples/fill-window/shaders/: fill.wgsl
examples/fill-window/src/: main.rs  renderers.rs
examples/imgui-winit/: Cargo.toml  README.md
examples/imgui-winit/src/: gui.rs  main.rs
examples/invaders/: Cargo.toml  README.md  main.rs
examples/invaders/simple-invaders/: Cargo.toml
examples/invaders/simple-invaders/src/: collision.rs  controls.rs  debug.rs  geo.rs  lib.rs  loader.rs  player.rs  shield.rs  sprites.rs
examples/invaders/simple-invaders/src/assets/: blipjoy1.pcx  cthulhu1.pcx  cthulhu2.pcx  laser3.pcx  laser4.pcx  laser5.pcx  laser7.pcx  laser8.pcx  player2.pcx  shield.pcx
examples/invaders/src/: main.rs
examples/minimal-egui/: Cargo.toml  README.md
examples/minimal-egui/src/: gui.rs  main.rs
examples/minimal-fltk/: Cargo.toml  README.md
examples/minimal-fltk/src/: main.rs
examples/minimal-sdl2/: Cargo.toml  README.md  main.rs
examples/minimal-sdl2/src/: main.rs  sdl.rs
examples/minimal-tao/: Cargo.toml  README.md
examples/minimal-tao/src/: main.rs
examples/minimal-web/: Cargo.toml  README.md  index.html  index.template.html
examples/minimal-web/src/: main.rs
examples/minimal-winit/: Cargo.toml  README.md  main.rs
examples/minimal-winit-android/: Cargo.toml  Containerfile  README.md
examples/minimal-winit-android/src/: lib.rs  main.rs
examples/minimal-winit/src/: main.rs
examples/pixel-aspect-ratio/: Cargo.toml  README.md
examples/pixel-aspect-ratio/src/: main.rs
examples/raqote-winit/: Cargo.toml  README.md
examples/raqote-winit/src/: main.rs  shapes.rs
examples/tiny-skia-winit/: Cargo.toml  README.md
examples/tiny-skia-winit/src/: main.rs  shape.rs
img/: pixels.xcf
internals/pixels-dragons/: Cargo.toml
internals/pixels-dragons/src/: lib.rs
internals/pixels-mocks/: Cargo.toml
internals/pixels-mocks/src/: lib.rs
pixels-mocks/: Cargo.toml
pixels-mocks/src/: lib.rs
run-wasm/: Cargo.toml
run-wasm/src/: main.rs
shaders/: README.md  frag.spv  scale.wgsl  scale_fill.wgsl  scale_hybrid.wgsl  shader.frag  shader.vert  vert.spv
simple-invaders/: Cargo.toml
simple-invaders/src/: collision.rs  controls.rs  debug.rs  geo.rs  lib.rs  loader.rs  particles.rs  sprites.rs
simple-invaders/src/assets/: blipjoy2.pcx  bullet1.pcx  bullet2.pcx  bullet3.pcx  bullet4.pcx  bullet5.pcx  ferris1.pcx  ferris2.pcx  laser1.pcx  laser2.pcx  laser6.pcx  player1.pcx
src/: builder.rs  lib.rs  macros.rs  render_pass.rs  renderers.rs
