[package]
name = "conway"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1"
getrandom = "0.2"
clipline = "0.1.1"
randomize = "3"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
pixels.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
