[package]
name = "egui-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.12"
env_logger = "0.8"
log = "0.4"
pixels = { path = "../.." }
winit = "0.25"
winit_input_helper = "0.10"

[dependencies.egui_wgpu_backend]
git = "https://github.com/hasenbanck/egui_wgpu_backend.git"
rev = "63a002c6a9b6c016e45806dd065864431caab621"

[dependencies.egui_winit_platform]
git = "https://github.com/hasenbanck/egui_winit_platform.git"
rev = "f9a0814a395a5cc1cc997081f33ee09503a4a307"
features = ["webbrowser"]
