[package]
name = "egui-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.12"
egui_wgpu_backend = "0.9"
env_logger = "0.8"
log = "0.4"
pixels = { path = "../.." }
winit = "0.25"
winit_input_helper = "0.10"

[dependencies.egui_winit_platform]
git = "https://github.com/hasenbanck/egui_winit_platform.git"
rev = "ab576591949a2c0ac1494af52713a1771ff8326a"
features = ["webbrowser"]
