[package]
name = "egui-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
resolver = "2"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.14"
egui_wgpu_backend = "0.12"
egui_winit_platform = { version = "0.10", features = ["webbrowser"] }
env_logger = "0.9"
log = "0.4"
pixels = { path = "../.." }
winit = "0.25"
winit_input_helper = "0.10"
