[package]
name = "imgui-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
imgui = "0.12"
imgui-wgpu = "0.24"
imgui-winit-support = "0.11"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true

# Until this gets updated support, this example is stuck on winit 0.27 and wgpu 0.17
[dependencies.winit]
version = "0.27"

[dependencies.winit_input_helper]
version = "0.13"

# Frozen dep for this specific example
[dependencies.pixels]
version = "0.14"
