[package]
name = "imgui-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
pixels = { path = "../.." }
imgui = "0.12"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "3db5c5a" }
imgui-winit-support = "0.13"
winit = "0.30"
winit_input_helper = "0.17"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
