[package]
name = "imgui-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2024"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
imgui = "0.12"
imgui-wgpu = "0.28"
imgui-winit-support = "0.13"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
pixels.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
