[package]
name = "invaders"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1"
env_logger = "0.10"
error-iter = "0.4"
game-loop = { version = "=1.1.0", features = ["winit"] }
getrandom = "0.2"
gilrs = "0.10"
log = "0.4"
pixels = { path = "../.." }
simple-invaders = { path = "simple-invaders" }
winit = "0.29"
winit_input_helper = "0.15"
