[package]
name = "invaders"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1"
game-loop = { version = "=1.1.0", features = ["winit"] }
getrandom = "0.2"
gilrs = "0.10"
pixels = { path = "../.." }
simple-invaders = { path = "simple-invaders" }

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
