[package]
name = "minimal-egui"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.26"
egui-wgpu = "0.26.0"
egui-winit = { version = "0.26", default-features = false, features = ["links"] }

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
pixels.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
