[package]
name = "minimal-egui"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
pixels = { path = "../.." }
egui = "0.33"
egui-wgpu = "0.33.0"
egui-winit = { version = "0.33", default-features = false, features = ["links"] }
winit = "0.30"
winit_input_helper = "0.17"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true

