[package]
name = "minimal-fltk"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
fltk = { version = "=1.3.13", features = ["raw-window-handle", "no-images", "no-pango"] }
env_logger = "0.9"
log = "0.4"
pixels = { path = "../.." }
