[package]
name = "minimal-fltk"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
error-iter = "0.4"
fltk = { version = "1", features = ["rwh06", "no-images", "no-pango"] }
env_logger = "0.10"
log = "0.4"
pixels = { path = "../.." }
