[package]
name = "minimal-sdl2"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.9"
fermium = { version = "20022.0.0", features = ["raw-window-handle"] }
log = "0.4"
pixels = { path = "../.." }
thiserror = "1.0"
zstring = "0.1"
