[package]
name = "minimal-tao"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
muda = "0.15"
pixels = { path = "../.." }
tao = "0.31"
