[package]
name = "minimal-tao"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
muda = "0.15"
tao = "0.31"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
pixels.workspace = true
