[package]
name = "minimal-winit-android"
version = "0.1.0"
authors = ["Randommist <andreq11s@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log.workspace = true
pixels.workspace = true
winit = { workspace = true, features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.android.signing.release]
path = "./path/to/KeyStoreFile.jks"
keystore_password = "password"
