[package]
name = "minimal-winit-android"
version = "0.1.0"
authors = ["Randommist <andreq11s@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log.workspace = true
pixels.workspace = true
winit = { workspace = true, features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.0"

[[bin]]
# Rename the bin to avoid https://github.com/rust-lang/cargo/issues/6313
name = "desktop-example"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.android.signing.release]
path = "./path/to/KeyStoreFile.jks"
keystore_password = "password"

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
