[package]
name = "minimal-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2024"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
log = "0.4"
env_logger = "0.11"
error-iter = "0.4"
pixels = { path = "../.." }
winit = "0.30
