[package]
name = "raqote-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
euclid = "0.22"
log = "0.4"
pixels = { path = "../.." }
raqote = { version = "0.8", default-features = false }
winit = "0.28"
# winit_input_helper = "0.13"

[dependencies.winit_input_helper]
git = "https://github.com/rukai/winit_input_helper.git"
rev = "9b9a34459fc121dfd542e728df76a1798a9abf34"
