[package]
name = "raqote-winit"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
euclid = "0.22"
log = "0.4"
pixels = { path = "../.." }
raqote = { version = "0.8", default-features = false }
winit = "0.29"
winit_input_helper = "0.15"
