[package]
name = "tiny-skia-winit"
version = "0.1.0"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = { path = "../.." }
tiny-skia = "0.11"
winit = "0.29"
winit_input_helper = "0.15"
