[package]
name = "tiny-skia-winit"
version = "0.1.0"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
tiny-skia = "0.11"

env_logger.workspace = true
error-iter.workspace = true
log.workspace = true
pixels.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
