[package]
name = "simple-invaders"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"

[dependencies]
line_drawing = "1.0"
pcx = "0.2"
randomize = "3.0"
binrw    = { version = "0.11.1", default-features = false }

[dev-dependencies]
byteorder = "1.3"
getrandom = "0.2"

[features]
default = [ ]
nostd   = [ ]